--- a/main.css
+++ b/main.css
@@ -1,15 +1,14 @@
 body {
-    background-color: #155804bd;
+    background-color: #222e1f93;
 }
 
 canvas {
-    background-color: #e8fffcd7;
+    background-color: #a8f5ffd7;
 }
 
 #gameScreen {
-    border: .2em solid #0c0505;
     border-radius: .1em;
-    box-shadow: 12px 12px 7px #092e00;
+    box-shadow: 2px 2px 7px #474747;
 }
 
 #img_ball {
@@ -25,47 +24,66 @@ section {
     padding: 40px 120px;
 }
 
-.h1,
-h1 {
+.best-score,
+.your-score,
+.level {
+    border-bottom: 1px solid #a4f4ff;
+}
+
+section h1 {
     font-family: cursive;
-    font-size: 30px;
-    color: blue;
+    font-size: 20px;
+    display: inline-block;
+    color: #ff000d;
     text-shadow: 2px 3px 2px #240111;
     text-transform: uppercase;
 }
 
-.h2,
-p {
+section h1 .fa {
+    color: yellow;
+    font-size: 30px;
+}
+
+strong {
+    font-size: 25px;
+}
+
+section span {
     font-family: cursive;
-    font-size: 50px;
+    font-size: 20px;
     color: #ffc4eb;
     text-shadow: 3px 3px 4px #ff0077;
     margin: 0 auto;
+    margin-left: 1em;
     text-transform: uppercase;
 }
 
 .p {
     font-family: 'Times New Roman', Times, serif;
     font-size: 20px;
-    color: blue;
+    color: #ffe600;
+    text-align: center;
     text-shadow: 3px 3px 4px #11040a;
     text-transform: lowercase;
     margin: 0 auto;
 }
+
 button {
-    border: 2px solid greenyellow;
+    border: 2px solid #ff0077;
     background-color: transparent;
     padding: 15px 50px;
     margin-top: 12px;
+    color: white;
     border-radius: 12px;
     font-size: 26px;
-    color: #240111;
     cursor: pointer;
+    width: 100%;
 }
+
 button:hover {
     border: 2px solid white;
     font-size: 28px;
     transition: ease-in;
     background: #ff0077;
-    box-shadow: inset 2px 3px 5px #240111,inset -2px -3px 5px #240111, 2px 7px 13px #041100;
+    box-shadow: inset 2px 3px 5px #240111, inset -2px -3px 5px #240111, 2px 7px 13px #041100;
 }
